--- a/test-output/old/Suite/AutomationExecution_Chrome.properties
+++ b/test-output/old/Suite/AutomationExecution_Chrome.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=AutomationExecution_Chrome]
+[SuiteResult context=DBMethodsExecution][SuiteResult context=AutomationExecution_Chrome]
